<resources>
    <string name="app_name">LanGenius</string>
    <string name="lan_share">Share on LAN</string>
    <string name="cbhasbeenshared">Clipboard shared</string>
    <string name="address_copied">Address copied √</string>
    <string name="text_received_is_link">Link text received √</string>
    <string name="open">Open</string>
    <string name="shareFiles">Shared Files :</string>
    <string name="language">en</string>
    <string name="newClipboard">New Clipboard !</string>
    <string name="newFile">New File :</string>
    <string name="addFileFailed">Add failed ,plz try another File Manager</string>
    <string name="storagepath">File receive path:\n</string>
    <string name="websiteAddress">"My Address : "</string>
    <string name="sp_settings" translatable="false">settings</string>
    <string name="sp_sub_frcv_path" translatable="false">frcv_path</string>
    <string name="openFileFailed">No handler for this type of file.</string>
    <string name="keyboardController">Remote Controller</string>
    <string name="settings">Settings</string>
    <string name="sp_sub_port" translatable="false">port</string>
    <string name="default_port" translatable="false">:2333</string>
    <string name="str_default_port">"Default Port "</string>
    <string name="str_setDefaultPort">Set default port</string>
    <string name="str_setDefaultFileRecvPath">Set file receive path</string>
    <string name="str_ok">ok</string>
    <string name="str_cancel">cancel</string>
    <string name="str_kc_manual">\"==========Command Manual========\n\nShortcut  Example:control alt t\n==================\n\t backspace      \n\t delete         \n\t enter          \n\t tab            \n\t escape         \n\t up             \n\t down           \n\t right          \n\t left           \n\t home           \n\t end            \n\t pageup         \n\t pagedown       \n\t f1             \n\t f2             \n\t f3             \n\t f4             \n\t f5             \n\t f6             \n\t f7             \n\t f8             \n\t f9             \n\t f10            \n\t f11            \n\t f12            \n\t f13            \n\t f14            \n\t f15            \n\t f16            \n\t f17            \n\t f18            \n\t f19            \n\t f20            \n\t f21            \n\t f22            \n\t f23            \n\t f24            \n\t command        \n\t alt            \n\t control        \n\t shift          \n\t right_shift    \n\t space          \n\t printscreen    \n\t insert         \n\t menu           \n\n\t audio_mute      \n\t audio_vol_down  \n\t audio_vol_up   \n\t audio_play     \n\t audio_stop     \n\t audio_pause    \n\t audio_prev     \n\t audio_next     \n\t audio_rewind   \n\t audio_forward  \n\t audio_repeat   \n\t audio_random   \n\n\t numpad_0\t\t\n\t numpad_1\t\t\n\t numpad_2\t\t\n\t numpad_3\t\t\n\t numpad_4\t\t\n\t numpad_5\t\t\n\t numpad_6\t\t\n\t numpad_7\t\t\n\t numpad_8\t\t\n\t numpad_9\t\t\n\n\t lights_mon_up    \n\t lights_mon_down  \n\t lights_kbd_toggle \n\t lights_kbd_up    \n\t lights_kbd_down  \"</string>
    <string name="str_new_device_detected">New remote device detected</string>
    <string name="custom_html_file">Html file service/Share folder</string>
    <string name="str_setted_succeed">Setted succeed !</string>
    <string name="sp_sub_clipshare" translatable="false">shareclipboard</string>
    <string name="cbsharedisabled">Clipboard sharing disabled</string>
    <string name="str_clear_after_sent">Clear after sent</string>
    <string name="file_chooser">Add Files</string>
    <string name="file_added">Shared File successfully</string>
    <string name="all">All</string>
    <string name="str_select_dir">Select static site directory</string>
    <string name="str_set_port">Set static site port</string>
    <string name="str_cannot_use_LanGenius_port">Cannot use LanGenius\'s server port</string>
    <string name="str_path_incorrect">Path incorrect</string>
    <string name="str_running_on">Running on ...</string>
    <string name="str_must_between">Must between 1000 ~ 65535</string>
    <string name="newbee_guide">Guide Page</string>
    <string name="quit_guide">Quit guide</string>
    <string name="never_show_up_again">Never show up again</string>
    <string name="click_to_add">Click the button blow \nto share files↓</string>
    <string name="now_browse_link">Now browse link blow on another device：</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="external_storage_not_found">External storage not found</string>
    <string name="msg">Message</string>
    <string name="choose_dir">Choose Directory</string>
    <string name="order_by_name">By name</string>
    <string name="order_by_data">By date</string>
    <string name="order_by_length">By size</string>
    <string name="cancel_sharing">Stop Sharing</string>

    <string name="author">Author : StevenZack</string>
    <string name="donate">Donate</string>

    <string name="up">Up</string>

    <string name="scan_qr_code">Scan this QR code</string>
    <string name="click_to_copy">Click to copy</string>
    <string name="permit">Permit</string>
    <string name="skip">Skip</string>
    <string name="App_will_be_limited_without_permission">App will be limited widthout permissions</string>
    <string name="apps">App</string>
    <string name="files">Files</string>
</resources>
