<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:title="@string/internal_storage"
            android:id="@+id/fc_internal"/>
        <item
            android:title="@string/external_storage"
            android:id="@+id/fc_external"/>
    </group>
    <item
        android:title="@string/all"
        android:id="@+id/filechooser_menu_all"
        />
    <group>
        <item
            android:id="@+id/fc_byname"
            android:title="@string/order_by_name"/>
        <item
            android:id="@+id/fc_bydate"
            android:title="@string/order_by_data"/>
        <item
            android:id="@+id/fc_bylength"
            android:title="@string/order_by_length"/>
    </group>
</menu>