<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xchat.stevenzack.langenius.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:elevation="15dp"
        android:layout_margin="20dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:text="@string/str_default_port"
            android:textAllCaps="false"
            android:id="@+id/set_bt_default_port"

            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:id="@+id/set_bt_frcvpath"
            android:text="@string/storagepath"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:id="@+id/set_bt_html"
            android:text="@string/custom_html_file"
            android:layout_height="wrap_content" />
        <CheckBox
            android:layout_width="wrap_content"
            android:text="@string/newbee_guide"
            android:id="@+id/set_newbeeGuide"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:src="@drawable/author_avatar"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/author"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="E-mail : stevenzack@qq.com"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/donate"
            android:textColor="#fff"
            android:layout_marginLeft="7dp"
            android:id="@+id/set_donate"
            android:elevation="25dp"
            android:layout_height="20dp" />
    </LinearLayout>
</FrameLayout>
